--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.less"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -91,7 +91,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.less"
+              "src/styles.scss"
             ],
             "scripts": []
           }
@@ -127,7 +127,7 @@
   "defaultProject": "vmc-cards",
   "schematics": {
     "@schematics/angular:component": {
-      "style": "less"
+      "style": "scss"
     }
   }
 }
