--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Deploy to Github pages 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
-          branch: testing-cards
+          branch: master
           folder: dist/vmc-cards
           target-folder: cards
           repository-name: IDEMSInternational/virtual-maths-camp-gh-pages
