Change /cards base to /card

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -23,14 +23,14 @@ jobs:
         run: yarn install
 
       - name: Build
-        run: npx ng build --prod --base-href /cards/ --deploy-url /cards/
+        run: npx ng build --prod --base-href /card/ --deploy-url /card/
         
       - name: Deploy to Github pages 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.0
         with:
           branch: master
           folder: dist/vmc-cards
-          target-folder: cards
+          target-folder: card
           repository-name: IDEMSInternational/virtual-maths-camp-gh-pages
           ssh-key: ${{ secrets.GH_DEPLOY_KEY }}
 
