chore: change dependency manager to npm

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -12,17 +12,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Node.js with Yarn cache
+
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "14"
-          cache: "yarn"
+
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile
+        run: npm ci
+
 
       - name: Build
-        run: yarn build
+        run: npm run build
 
       - name: Deploy to Github Pages 🚀
         uses: JamesIves/github-pages-deploy-action@v4.5.0
