--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -20,8 +20,25 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+        # As using legacy version of node (14) explicitly install chromium dependencies
+        # NOTE - this may no longer be necessary when updating to newer versions of node and scully
+      - name: Install Chromium dependencies for Puppeteer
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y wget --no-install-recommends \
+            ca-certificates fonts-liberation libappindicator3-1 libasound2 libatk-bridge2.0-0 \
+            libatk1.0-0 libcups2 libdbus-1-3 libgdk-pixbuf2.0-0 libnspr4 libnss3 libx11-xcb1 \
+            libxcomposite1 libxdamage1 libxrandr2 xdg-utils libu2f-udev libvulkan1
+
+      - name: Show Chromium path for debugging
+        run: |
+          npx puppeteer browsers install chrome
+          echo "CHROMIUM_PATH=$(npx puppeteer browsers list | grep -i chrome | awk '{print $2}')" >> $GITHUB_ENV
+
       - name: Build
-        run: npm run build
+        env:
+          CHROMIUM_PATH: ${{ env.CHROMIUM_PATH }}
+        run: npm run build -- --serverTimeout=120000
 
       - name: Deploy to Github Pages 🚀
         uses: JamesIves/github-pages-deploy-action@v4.5.0
