--- a/package.json
+++ b/package.json
@@ -59,9 +59,7 @@
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
   },
-  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447",
   "engines": {
-    "node": ">=14 <15",
-    "yarn": ">=1.22.0 <2"
+    "node": ">=14 <15"
   }
 }
